--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,9 @@
+.dev {
+    * {
+        position: relative;
+        outline: 1px solid red;
+    }
+}
 .App {
     text-align: center;
     min-height: 100vh;
