--- a/src/page/RecommandList/recommand-list.css
+++ b/src/page/RecommandList/recommand-list.css
@@ -1,17 +1,23 @@
 .recommand-list {
-  max-width: 100vw;
+  width: 100%;
   padding: 0; }
 
 .recommand-list .hide {
   display: none; }
 
+.recommand-list .recommand-full-list-block {
+  height: 200px;
+  overflow: hidden; }
+
 .recommand-list .recommand-full-list {
   -ms-overflow-style: none;
   overflow: -moz-scrollbars-none;
-  display: flex;
+  padding: 0;
   flex-direction: row;
   position: relative;
-  max-width: 100vw;
+  max-width: 100%;
+  display: flex;
+  flex-wrap: nowrap;
   overflow-x: scroll; }
 
 .recommand-list .recommand-full-list::-webkit-scrollbar {
@@ -24,7 +30,7 @@
   border-radius: 15px; }
 
 .recommand-list .headline {
-  width: auto;
+  width: fit-content;
   text-align: left;
   padding: 10px;
   font-size: 2em;
